--- a/tests/forms.html
+++ b/tests/forms.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
 
-        <title>iui - default theme</title>
+        <title>iui - forms - default theme</title>
 
         <link rel="stylesheet" type="text/css" href="../iui.css" />
 
