add other features test.

--- a/tests/tables.html
+++ b/tests/tables.html
@@ -39,7 +39,7 @@
                     <td>col1-3</td>
                     <td>col1-4</td>
                 </tr>
-                <tr>
+                <tr class="active-item">
                     <td>col2-0</td>
                     <td>col2-1</td>
                     <td>col2-2</td>
@@ -84,7 +84,7 @@
                     <td>col1-3</td>
                     <td>col1-4</td>
                 </tr>
-                <tr>
+                <tr class="active-item">
                     <td>col2-0</td>
                     <td>col2-1</td>
                     <td>col2-2</td>
