better organize development's folder structure.

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -8,7 +8,7 @@
 
         <title>Default Tests</title>
 
-        <link rel="stylesheet" href="../iui.css" />
+        <link rel="stylesheet" href="../dist/iui.css" />
 
         <style>
             h1, h2, h3, h4 {
