--- a/tests/grids.html
+++ b/tests/grids.html
@@ -9,7 +9,7 @@
 
         <title>iui - default theme</title>
 
-        <link rel="stylesheet" type="text/css" href="../iui.css" />
+        <link rel="stylesheet" type="text/css" href="../dist/iui.css" />
         
         <style>
 
