--- a/tests/forms.html
+++ b/tests/forms.html
@@ -9,7 +9,7 @@
 
         <title>iui - forms - default theme</title>
 
-        <link rel="stylesheet" type="text/css" href="../iui.css" />
+        <link rel="stylesheet" type="text/css" href="../dist/iui.css" />
 
     </head>
 
