optimize grid system for optimal and better css code rendering
feal really proud of this improvement :)

--- a/tests/grids.html
+++ b/tests/grids.html
@@ -181,7 +181,7 @@
                         <div class="col x3-5"></div>
                         <div class="col x1-5"></div>
                         <div class="col x1-5"></div>
-                        <div class="col x3-4 push-s1-4"></div>
+                        <div class="col x3-4 push-x1-4"></div>
                         <div class="col x2-3"></div>
                         <div class="col x1-3"></div>
 
