new grid features and minor setting
-now once can disable coloumn visibility and display depending of target media

--- a/tests/grids.html
+++ b/tests/grids.html
@@ -142,7 +142,7 @@
                 <div class='col x2-12'></div>
                 <div class='col x5-12'></div>
                 <div class='col x7-12'></div>
-                <div class='col x12-12'></div>
+                <div class='col x12-12 hidden-m'></div>
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
@@ -150,14 +150,15 @@
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
-                <div class='col x1-2'>
+                <div class='col x1-2 none-s'>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                     nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
-                <div class='col x1-2 align-b'>
+                <div class='col x1-2 none-s'>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </div>
             </figure>
             
@@ -215,14 +216,14 @@
                 <br/>
                 <div class="col x2-2 p1-2"></div>
                 <div class="col x1-2 p1-2"></div>
-                <div class="col x1-2 m2-3"></div>
+                <div class="col x1-2 m2-3 hidden-m"></div>
                 <div class="col x1-3 m2-4"></div>
                 <div class="col x1-3 m1-4"></div>
                 <div class="col x1-3 m1-4"></div>
-                <div class="col x1-4 n1-5"></div>
-                <div class="col x1-4 n1-5"></div>
-                <div class="col x1-4 n2-5"></div>
-                <div class="col x1-4 n1-5"></div>
+                <div class="col x1-4 n1-5 none-m"></div>
+                <div class="col x1-4 n1-5 none-m"></div>
+                <div class="col x1-4 n2-5 none-m"></div>
+                <div class="col x1-4 n1-5 none-m"></div>
                 <div class="col x1-5 l1-8"></div>
                 <div class="col x1-5 l1-8"></div>
                 <div class="col x1-5 l3-8"></div>
