--- a/tests/grids.html
+++ b/tests/grids.html
@@ -142,7 +142,7 @@
                 <div class='col x2-12'></div>
                 <div class='col x5-12'></div>
                 <div class='col x7-12'></div>
-                <div class='col x12-12 hidden-m'></div>
+                <div class='col x12-12 hide-m'></div>
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
                 <div class='col x1-12'></div>
@@ -216,7 +216,7 @@
                 <br/>
                 <div class="col x2-2 p1-2"></div>
                 <div class="col x1-2 p1-2"></div>
-                <div class="col x1-2 m2-3 hidden-m"></div>
+                <div class="col x1-2 m2-3 hide-m"></div>
                 <div class="col x1-3 m2-4"></div>
                 <div class="col x1-3 m1-4"></div>
                 <div class="col x1-3 m1-4"></div>
