apply changes according to new style class naming-spec
extra style will be now named with format: *s-name*.
in case of name associate to css propertie, take the three first letters.
for example, shadow-bottom style become `s-sha-b` where s- = style-.

**these changes are incompatibles with previous development (bellowed versions)**

--- a/tests/tables.html
+++ b/tests/tables.html
@@ -18,8 +18,8 @@
         <div id="i-main-block">
         
             <br/>
-            <span>with line-style cel-style</span>
-            <table width="100%" class="line-style cel-style">
+            <span>with s-line s-cel</span>
+            <table width="100%" class="s-line s-cel">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
@@ -63,8 +63,8 @@
             </table>
 
             <br/>
-            <span>with line-style h-border</span>
-            <table width="100%" class="line-style h-border">
+            <span>with s-line h-border</span>
+            <table width="100%" class="s-line h-border">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
@@ -94,8 +94,8 @@
             </table>
             
             <br/>
-            <span>with line-style v-border</span>
-            <table width="100%" class="v-border line-style">
+            <span>with s-line v-border</span>
+            <table width="100%" class="v-border s-line">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
