add new style class

--- a/tests/collections.html
+++ b/tests/collections.html
@@ -56,6 +56,19 @@
                 fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                 culpa qui officia deserunt mollit anim id est laborum.
             </div>
+            
+               <div class="i-block s-rad-r" style="display: inline-block; width: 40%">
+                <b>i-block s-rad-r</b><br/>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </div> 
+            <div class="i-block s-rad-l" style="display: inline-block; width: 40%">
+                <b>i-block s-rad-l</b><br/>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
            
            <div class="i-block s-sha-t">
                <b>i-block s-sha-t</b><br/>
