new styles restructuration
apply changes according to new style class naming-spec

--- a/tests/tables.html
+++ b/tests/tables.html
@@ -18,8 +18,8 @@
         <div id="i-main-block">
         
             <br/>
-            <span>with s-line s-cel</span>
-            <table width="100%" class="s-line s-cel">
+            <span>with s-line s-cel hover-cel</span>
+            <table width="100%" class="s-line s-cel hover-cel">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
@@ -63,8 +63,8 @@
             </table>
 
             <br/>
-            <span>with s-line h-border</span>
-            <table width="100%" class="s-line h-border">
+            <span>with s-line h-border hover-line</span>
+            <table width="100%" class="s-line h-border hover-line">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
@@ -94,8 +94,8 @@
             </table>
             
             <br/>
-            <span>with s-line v-border</span>
-            <table width="100%" class="v-border s-line">
+            <span>with s-line v-border hover-cel</span>
+            <table width="100%" class="v-border s-line hover-cel">
                 <th>head0</th>
                 <th>head1</th>
                 <th>head2</th>
@@ -153,7 +153,7 @@
                         <td>col2-0</td>
                         <td>col2-1</td>
                         <td>col2-2</td>
-                        <td>col2-3</td>
+                        <td class="active-item">col2-3</td>
                         <td>col2-4</td>
                     </tr>
                     <tr>
