simplify some class name-spec, add badge feature
`i-` namespace will now use only for special case

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -30,7 +30,7 @@
             <a href="#"> link-ancre</a>
             <a href="#1"> link-ancre1</a>
             <a href="#2"> link-ancre2</a>
-            <a href="#" class="i-btn">button link</a>
+            <a href="#" class="btn">button link</a>
         </div>
         
         <h2>Button</h2>
@@ -47,7 +47,7 @@
             <input type="submit" value="input submit"/>
             <input type="reset" value="input reset"/>
 
-            <a href="#" class="i-btn">button link</a>
+            <a href="#" class="btn">button link</a>
             <button><a href="#">button link-inside</a></button>
         </div>
 
