--- a/tests/forms.html
+++ b/tests/forms.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <div id="i-main-block">
+        <div id="main-block">
 
             <FORM>
 
@@ -58,11 +58,11 @@
 
             </FORM>
 
-            <FORM class="i-form">
+            <FORM class="look-form">
 
                 <FIELDSET>
 
-                    <LEGEND> i-form </LEGEND>
+                    <LEGEND> form </LEGEND>
 
                     <LABEL>
                         <SPAN> Electronic adress </SPAN>
@@ -100,11 +100,11 @@
             </FORM>
 
 
-            <FORM class="i-form">
+            <FORM class="look-form">
 
                 <FIELDSET>
 
-                    <LEGEND> another i-form </LEGEND>
+                    <LEGEND> another form </LEGEND>
 
                     <LABEL>
                         <INPUT required type="email" name="email" />
@@ -141,11 +141,11 @@
 
             </FORM>
 
-            <FORM class="i-form">
+            <FORM class="look-form">
 
                 <FIELDSET>
 
-                    <LEGEND> i-form align with `br` </LEGEND>
+                    <LEGEND> form align with `br` </LEGEND>
 
                     <LABEL>
                         <SPAN> Electronic adress </SPAN>
@@ -187,11 +187,11 @@
 
             </FORM>
 
-            <FORM class="i-form">
+            <FORM class="look-form">
 
                 <FIELDSET>
 
-                    <LEGEND> another i-form align with `br` </LEGEND>
+                    <LEGEND> another form align with `br` </LEGEND>
 
                     <LABEL>
                         <INPUT required type="email" name="email" />
@@ -233,11 +233,11 @@
 
             </FORM>
 
-            <FORM class="i-form mi-style">
+            <FORM class="look-form mi-style">
 
                 <FIELDSET>
 
-                    <LEGEND> i-form - mi-style </LEGEND>
+                    <LEGEND> form - mi-style </LEGEND>
 
                     <LABEL>
                         <SPAN> Electronic adress </SPAN>
