--- a/tests/tables.html
+++ b/tests/tables.html
@@ -15,7 +15,7 @@
 
     <body>
 
-        <div id="i-main-block">
+        <div id="main-block">
         
             <br/>
             <span>with s-line s-cel hover-cel</span>
